--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="container image">
         <div class="annotate">
-            <img src="img/NYCHA.jpg" />
+            <img src="img/nycha.jpg" />
             <p class="caption">The March 23 rally saw around 150 protestors. (Photo Credit: Dean Moses, AMNY)</p>
             <div id="repairs" class="dot purple">
                 <a class="close fa fa-times" href="#"></a>
